[gd_scene load_steps=7 format=3 uid="uid://dl3lrfam021ul"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_te6vx"]
[ext_resource type="Shader" path="res://materials/tiling_shader.gdshader" id="2_xfkfg"]
[ext_resource type="Texture2D" uid="uid://c031a0c5v45ux" path="res://textures/tiledBlueBackground.png" id="3_fqvt0"]
[ext_resource type="Texture2D" uid="uid://c2rggaydprjmo" path="res://textures/logo6.png" id="4_4b0pw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ts50w"]
bg_color = Color(0.501961, 0.419608, 0.564706, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lpt4d"]
shader = ExtResource("2_xfkfg")

[node name="MainMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ts50w")
script = ExtResource("1_te6vx")

[node name="Background" type="TextureRect" parent="."]
auto_translate_mode = 1
material = SubResource("ShaderMaterial_lpt4d")
layout_mode = 2
texture = ExtResource("3_fqvt0")
expand_mode = 1
stretch_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
ignore_rotation = false

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="Title" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer/Title"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Veiled Ocean: Echoes of Nautical Grief"

[node name="MenuButtonContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/MenuButtonContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MainMenuButton"
theme_override_font_sizes/font_size = 64
text = "Start Game"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/MenuButtonContainer"]
layout_mode = 2

[node name="HowToPlayButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MainMenuButton"
theme_override_font_sizes/font_size = 48
text = "How To Play"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/MenuButtonContainer"]
layout_mode = 2

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MainMenuButton"
theme_override_font_sizes/font_size = 48
text = "Options"

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 2
offset_left = 360.0
offset_top = 49.0
offset_right = 1800.0
offset_bottom = 1129.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_4b0pw")

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer/StartGameButton" to="." method="_on_start_game_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer2/HowToPlayButton" to="." method="_on_how_to_play_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer2/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer3/OptionsButton" to="." method="_on_options_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer3/OptionsButton" to="." method="_on_options_button_pressed"]
